fix content spacing on small screen for docs

--- a/documentation.css
+++ b/documentation.css
@@ -114,9 +114,10 @@
 }
 
 /* Hide the center of the header when mobile menu is open */
-.Pinpoint.Documentation.Page.Content .leftWrapper.open .Pinpoint.Header .center {
+.Pinpoint.Documentation.Page .Pinpoint.Header .center {
 	@apply hidden sm:block;
 }
+
 
 /* Hide the right side when mobile menu is open */
 .Pinpoint.Documentation.Page.Content .rightWrapper {
@@ -141,7 +142,7 @@
 }
 
 .Pinpoint.Documentation.Card.wrapper {
-	@apply flex flex-col rounded-md border-gray-200 hover:bg-gray-100 transition border-l-3 pl-4 py-2 text-black dark:text-white;
+	@apply flex flex-col rounded-md border-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 transition border-l-3 pl-4 py-2 text-black dark:text-white;
 }
 
 .Pinpoint.Documentation.Card.wrapper .title {
